--- a/Expanding_Cards/style.css
+++ b/Expanding_Cards/style.css
@@ -1,17 +1,27 @@
-@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Muli", sans-serif;
+  font-family: "Robot", sans-serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.title {
+  width: 90vw;
+}
+
+.title h1 {
+  position: relative;
+  left: 15px;
 }
 
 .container {
@@ -23,22 +33,22 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin: 10px;
   height: 80vh;
   border-radius: 50px;
-  color: #fff;
+  position: relative;
+  color: white;
   cursor: pointer;
   flex: 0.5;
-  margin: 10px;
-  position: relative;
-  transition: flex 0.7s ease-in;
+  -webkit-transition: all 700ms ease-in;
 }
 
 .panel h3 {
-  font-size: 24px;
   position: absolute;
   bottom: 20px;
   left: 20px;
-  margin: 0;
+  text-align: center;
+  font-size: 20px;
   opacity: 0;
 }
 
@@ -48,7 +58,7 @@ body {
 
 .panel.active h3 {
   opacity: 1;
-  transition: opacity 0.3s ease0in 0.4s;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
 @media (max-width: 480px) {
